kubernetes/part_15/stateful-nextcloud-db.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
kind: Service
apiVersion: v1
metadata:
  name: nextcloud-db-service           # < service name (see link with statufulset yaml)
  namespace: nextcloud
spec:
  selector:
    pod-label: nextcloud-db-pod        # < reference to the statefulset (connects the service with the statefulset)
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
---
